fix: make header static on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -217,6 +217,11 @@ footer {
         width: 100%;
     }
 
+    header {
+        position: static;
+        box-shadow: none;
+    }
+
     header .container {
         flex-direction: column;
     }
